# adastra

./: README.md  pyproject.toml
src/adastra/: client.py
src/adastra/galaxy/: __init__.py  models.py
src/adastra/sep/: __init__.py  models.py
src/adsepra/: __init__.py  client.py  dataproducts.py
tests/: conftest.py  test_client.py  test_dataproducts.py  test_domains.py  test_sep_dataproducts.py  test_sep_domains.py
tests/cassettes/test_dataproducts/: test_create_incomplete_product[product0].yaml  test_create_incomplete_product[product1].yaml  test_create_invalid_product[product0].yaml  test_create_invalid_product[product1].yaml  test_create_invalid_product[product2].yaml  test_create_invalid_product[product3].yaml  test_create_invalid_product[product4].yaml  test_create_invalid_product[product5].yaml  test_create_invalid_product[product6].yaml  test_create_invalid_product[product7].yaml  test_create_invalid_product[product8].yaml  test_create_product.yaml  test_get_product[product0].yaml  test_get_product[product1].yaml  test_list_products.yaml
tests/cassettes/test_domains/: test_create_domain.yaml  test_create_duplicate_domain.yaml  test_create_invalid_domain[None].yaml  test_create_invalid_domain[].yaml  test_delete_domain.yaml  test_delete_with_non_existing_id.yaml  test_get_domain.yaml  test_get_domain_with_non_existing_id.yaml  test_list_domains.yaml  test_update_domain.yaml  test_update_domain_name.yaml  test_update_domain_with_non_existing_id.yaml
tests/cassettes/test_sep_dataproducts/: test_create_incomplete_product[product0].yaml  test_create_incomplete_product[product1].yaml  test_create_invalid_product[product0].yaml  test_create_invalid_product[product1].yaml  test_create_invalid_product[product2].yaml  test_create_invalid_product[product3].yaml  test_create_invalid_product[product4].yaml  test_create_invalid_product[product5].yaml  test_create_invalid_product[product6].yaml  test_create_product.yaml  (+13 more)
tests/helpers/: utils.py
(+28 files in other folders)
