[tool.poetry]
name = "adsepra"
version = "0.0.1"
description = "A Python Wrapper around the Starburst Enterprise REST API for Data Products"
authors = ["Arne Ottens <arne.ottens@starburst.io>"]
readme = "README.md"
packages = [{include = "adsepra", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-recording = "^0.13.0"

[tool.pytest.ini_options]
pythonpath = ["tests/helpers"]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
